Aggiornamento completo della repository

--- a/partite/Rakuten/index.html
+++ b/partite/Rakuten/index.html
@@ -14,9 +14,10 @@
 body {
   position: relative;
   overflow-x: hidden;
-  background: linear-gradient(-45deg, #2c1e1e, #1a1a1a, #2c5364, #a3d9ff);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+ /* background: linear-gradient(-45deg, #2c1e1e, #1a1a1a, #2c5364, #a3d9ff); */
+ /* background-size: 400% 400%; */
+ /* animation: gradient 15s ease infinite; */
+  background: #1a1a1a;
   font-family: 'Comic Neue', cursive, sans-serif;
   margin: 0;
   padding: 20px;
