Aggiornamento completo della repository

--- a/partite/serie/player.html
+++ b/partite/serie/player.html
@@ -190,7 +190,7 @@
 
   <button class="watch-btn" onclick="launchFullscreenPlayer()">🎬 Guarda</button>
   <p id="enter-hint" style="text-align:center; font-size:1rem; opacity:0.7; margin-top:0.5rem;">
-  🎬 Premi <strong>Enter</strong> per avviare il player
+  🚫 Non interagire con il <strong>Player</strong> si avviano pagine pubblicitarie
 </p>
 
 
