--- a/partite/set/search.html
+++ b/partite/set/search.html
@@ -6,32 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      position: relative;
-      overflow-x: hidden;
-      background: linear-gradient(-45deg, #2c1e1e, #1a1a1a, #2c5364, #a3d9ff);
-      background-size: 400% 400%;
-      animation: gradient 15s ease infinite;
-      font-family: 'Comic Neue', cursive, sans-serif;
-      margin: 0;
-      padding: 20px;
-      color: #2d2d2d;
-      text-align: center;
-      z-index: 0;
-    }
+  position: relative;
+  overflow-x: hidden;
+  background: linear-gradient(-45deg, #2c1e1e, #1a1a1a, #2c5364, #a3d9ff);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  font-family: 'Comic Neue', cursive, sans-serif;
+  margin: 0;
+  padding: 20px;
+  color: #2d2d2d;
+  text-align: center;
+  z-index: 0;
+}
 
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('https://raw.githubusercontent.com/nero081/loghi/main/partite/primo/loghi/nero.png') no-repeat center center;
-      background-size: cover;
-      opacity: 0.2;
-      pointer-events: none;
-      z-index: -1;
-    }
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('https://raw.githubusercontent.com/nero081/loghi/main/partite/primo/loghi/nero.png') no-repeat center center;
+  background-size: cover;
+  opacity: 0.2; /* controlla la trasparenza */
+  pointer-events: none;
+  z-index: -1;
+}
 
     input {
       padding: 10px;
@@ -70,6 +70,14 @@
     .result:hover {
       background: #333;
       transform: scale(1.01);
+    }
+
+    .result img.logo {
+      width: 64px;
+      height: 64px;
+      object-fit: contain;
+      background: #000;
+      border-radius: 4px;
     }
 
     .result .details {
@@ -114,7 +122,7 @@
   </style>
 </head>
 <body>
-  <h1>🔎 Cerca Serie</h1>
+  <h1>🔎 Cerca Film</h1>
   <input type="text" id="search" placeholder="Cerca..." />
 
   <div class="results" id="results"></div>
@@ -122,65 +130,54 @@
   <br>
   <a href="index.html">⟵ Torna alla home</a>
 
-  <script>
-    let data = [];
+ <script>
+  let data = [];
 
-    // Carica e prepara i dati
-    fetch('search.json')
-      .then(res => res.json())
-      .then(json => {
-        data = json.map(item => ({
-          ...item,
-          lowercaseName: item.name.toLowerCase()
-        }));
-      });
+  fetch('search.json')
+    .then(res => res.json())
+    .then(json => {
+      data = json;
+    });
 
-    // Funzione debounce
-    function debounce(func, delay) {
-      let timeout;
-      return function (...args) {
-        clearTimeout(timeout);
-        timeout = setTimeout(() => func.apply(this, args), delay);
-      };
+  document.getElementById('search').addEventListener('input', () => {
+    renderResults();
+  });
+
+  function renderResults() {
+    const term = document.getElementById('search').value.toLowerCase().trim();
+    const list = document.getElementById('results');
+    const noResults = document.getElementById('noResults');
+
+    list.innerHTML = '';
+    noResults.style.display = 'none';
+
+    if (term.length === 0) return; // aspetta almeno un carattere
+
+    const filtered = data.filter(item => item.name.toLowerCase().includes(term));
+
+    if (filtered.length === 0) {
+      noResults.style.display = 'block';
+      return;
     }
 
-    // Funzione per mostrare risultati
-    function renderResults() {
-      const term = document.getElementById('search').value.toLowerCase().trim();
-      const list = document.getElementById('results');
-      const noResults = document.getElementById('noResults');
+    filtered.sort((a, b) => a.name.localeCompare(b.name));
 
-      list.innerHTML = '';
-      noResults.style.display = 'none';
+    filtered.forEach(item => {
+      const div = document.createElement('div');
+      div.className = 'result';
 
-      if (term.length === 0) return;
+      div.innerHTML = `
+        <div class="details">
+          <h3>${item.name}</h3>
+        </div>
+        <a href="${item.url}" target="_blank" class="btn">Vai</a>
+      `;
+      list.appendChild(div);
+    });
+  }
+</script>
 
-      const filtered = data.filter(item => item.lowercaseName.includes(term));
 
-      if (filtered.length === 0) {
-        noResults.style.display = 'block';
-        return;
-      }
 
-      filtered.sort((a, b) => a.name.localeCompare(b.name));
-
-      filtered.forEach(item => {
-        const div = document.createElement('div');
-        div.className = 'result';
-
-        div.innerHTML = `
-          <div class="details">
-            <h3>${item.name}</h3>
-          </div>
-          <a href="${item.url}" target="_blank" class="btn">Vai</a>
-        `;
-
-        list.appendChild(div);
-      });
-    }
-
-    // Applica debounce alla ricerca
-    document.getElementById('search').addEventListener('input', debounce(renderResults, 300));
-  </script>
 </body>
 </html>
